src/test/ui/unknown-tool-name.rs
#[foo::bar] //~ ERROR failed to resolve: use of undeclared crate or module `foo`
fn main() {}
